Minor edits to opening paragraph

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
               Let's build a rapid software Prototype in 80 hours
             </h1>
             <p class="text-muted">
-              My name is KG and I am a Software Artisan
+              My name is KG and I am a Full-Stack Software Artisan
               <a
                 target="_blank"
                 style="color:#51B065"
