Change Meta content

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>80 Hr Prototype</title>
     <meta
       name="description"
-      content="A demo landing page for agencies or product oriented businesses built using Shards, a free, modern and lightweight UI toolkit based on Bootstrap 4."
+      content="I am KG, a Full-Stack Software Artisan who works with startups/SMEs to develop rapid software Prototypes in 80 hrs"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -107,9 +107,9 @@
                 href="https://www.linkedin.com/in/kgotso-koete-7b066631/"
                 >(Resume)
               </a>
-              who works with startups/VC portfolio companies to develop rapid
-              software Prototypes/MVPs. Build it fast and cheaply, test it
-              without spending a fortune on development.
+              who works with startups/small businesses to develop rapid software
+              Prototypes/MVPs. Build it fast and cheaply, test it without
+              spending a fortune on development.
             </p>
 
             <div class="d-block mt-4"></div>
