Add Araba mobile app preview video

--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
         <div class="py-4">
           <div class="row">
             <div class="card-deck">
-              <div class="col-md-12 col-lg-4">
+              <div class="col-md-12 col-lg-6">
                 <div class="card mb-4">
                   <img
                     class="card-img-top"
@@ -227,7 +227,7 @@
                   />
                   <div class="card-body">
                     <h4 class="card-title">
-                      Araba Q&A
+                      Araba Q&A web app
                     </h4>
                     <p class="card-text">
                       Araba is a Q&A app built with Discover Meteor's help using
@@ -243,7 +243,41 @@
                 </div>
               </div>
 
-              <div class="col-md-12 col-lg-4">
+              <div class="col-md-12 col-lg-6">
+                <div class="card mb-4">
+                  <div class="embed-responsive embed-responsive-16by9">
+                    <iframe
+                      width="560"
+                      height="315"
+                      src="https://www.youtube.com/embed/TEplbkre20k"
+                      frameborder="0"
+                      allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                      allowfullscreen
+                    ></iframe>
+                  </div>
+                  <div class="card-body">
+                    <h4 class="card-title">
+                      Araba Q&A mobile app
+                    </h4>
+                    <p class="card-text">
+                      Android mobile version of Araba build with Meteor &
+                      Cordova and deployed to the Google Play Store. Mobile app
+                      server is based on the URL of web app deployed on Heroku.
+                      Google Play Store link below will be active soon pending
+                      review
+                    </p>
+
+                    <a
+                      class="btn btn-outline-success btn-pill"
+                      target="_blank"
+                      href="#examples"
+                      >Download available soon &rarr;</a
+                    >
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-md-12 col-lg-6">
                 <div class="card mb-4">
                   <img
                     class="card-img-top"
@@ -269,7 +303,7 @@
                 </div>
               </div>
 
-              <div class="col-md-12 col-lg-4">
+              <div class="col-md-12 col-lg-6">
                 <div class="card mb-4">
                   <img
                     class="card-img-top"
