Add Araba mobile app Google Play Store link

--- a/index.html
+++ b/index.html
@@ -263,16 +263,17 @@
                       Android mobile version of Araba build with Meteor &
                       Cordova and deployed to the Google Play Store. Mobile app
                       server is based on the URL of web app deployed on Heroku.
-                      Google Play Store link below will be active soon pending
-                      review
+                      Google Play Store link below.
                     </p>
 
                     <a
-                      class="btn btn-outline-success btn-pill"
                       target="_blank"
-                      href="#examples"
-                      >Download available soon &rarr;</a
-                    >
+                      href="https://play.google.com/store/apps/details?id=com.idx8tytbmgs9oy.j9l57qbivfxe&hl=en"
+                      ><img
+                        class="w-25 mt-2"
+                        src="images/app-promo/badge-google-play-store.png"
+                        alt="Get it on Google Play Store"
+                    /></a>
                   </div>
                 </div>
               </div>
