--- a/index.html
+++ b/index.html
@@ -230,8 +230,8 @@
                       Araba Q&A web app
                     </h4>
                     <p class="card-text">
-                      Araba is a Q&A app built with Discover Meteor's help using
-                      the Meteor framework and deployed to the web on Heroku
+                      Araba is a Q&A app built with the Meteor JS framework and
+                      deployed to the web on Heroku
                     </p>
                     <a
                       class="btn btn-outline-success btn-pill"
@@ -262,8 +262,8 @@
                     <p class="card-text">
                       Android mobile version of Araba build with Meteor &
                       Cordova and deployed to the Google Play Store. Mobile app
-                      server is based on the URL of web app deployed on Heroku.
-                      Google Play Store link below.
+                      server is based on the API URL of web app deployed on
+                      Heroku. Google Play Store link below.
                     </p>
 
                     <a
@@ -291,8 +291,8 @@
                     </h4>
                     <p class="card-text">
                       SocialApe is a Microblogging app similar to Twitter minus
-                      the aggression. Built with the help of the good folks at
-                      Classed using React and Firebase
+                      the aggression. Built with React and Material Design as
+                      the frontend and Firebase as the backend
                     </p>
                     <a
                       class="btn btn-outline-success btn-pill"
@@ -317,14 +317,121 @@
                     </h4>
                     <p class="card-text">
                       Conduit is a social blogging site similar to
-                      Medium/Tumblr. Built with Thinkster's help using MERN
-                      stack
+                      Medium/Tumblr. Modified from Thinkster's open source app
+                      using MERN stack.
                     </p>
                     <a
                       class="btn btn-outline-success btn-pill"
                       target="_blank"
                       href="https://conduit-by-kg.firebaseapp.com/"
                       >Click to see demo &rarr;</a
+                    >
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- / Our Blog Section -->
+
+    <!-- Our Blog Section -->
+    <div class="blog section section-invert py-4" id="examples">
+      <h3 class="section-title text-center m-5">
+        The FoodTasker Android app, an MVP clone of UberEats food delivery
+        service
+      </h3>
+      <div class="container">
+        <div class="py-4">
+          <div class="row">
+            <div class="card-deck">
+              <div class="col-md-12 col-lg-4">
+                <div class="card mb-4">
+                  <div class="embed-responsive embed-responsive-16by9">
+                    <iframe
+                      width="560"
+                      height="315"
+                      src="https://www.youtube.com/embed/z7Nk9ZZG9t4"
+                      frameborder="0"
+                      allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                      allowfullscreen
+                    ></iframe>
+                  </div>
+                  <div class="card-body">
+                    <h4 class="card-title">
+                      FoodTasker restaurant web app & API
+                    </h4>
+                    <p class="card-text">
+                      An UberEats clone where restaurant users can create
+                      restaurants, menu's and meals.
+                    </p>
+                    <a
+                      class="btn btn-outline-success btn-pill"
+                      target="_blank"
+                      href="https://arcane-spire-07518.herokuapp.com/"
+                      >Click to see demo &rarr;</a
+                    >
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-md-12 col-lg-4">
+                <div class="card mb-4">
+                  <div class="embed-responsive embed-responsive-16by9">
+                    <iframe
+                      width="560"
+                      height="315"
+                      src="https://www.youtube.com/embed/kaGekU4ppTk"
+                      frameborder="0"
+                      allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                      allowfullscreen
+                    ></iframe>
+                  </div>
+                  <div class="card-body">
+                    <h4 class="card-title">
+                      Foodtasker customer mobile frontend
+                    </h4>
+                    <p class="card-text">
+                      An UberEats clone and mobile app where customers can sign
+                      in using Facebook, create, pay for and track orders.
+                    </p>
+                    <a
+                      class="btn btn-outline-success btn-pill"
+                      target="_blank"
+                      href="https://araba-app.herokuapp.com/"
+                      >Download APK file &rarr;</a
+                    >
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-md-12 col-lg-4">
+                <div class="card mb-4">
+                  <div class="embed-responsive embed-responsive-16by9">
+                    <iframe
+                      width="560"
+                      height="315"
+                      src="https://www.youtube.com/embed/c2dS_BJX-Qc"
+                      frameborder="0"
+                      allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                      allowfullscreen
+                    ></iframe>
+                  </div>
+                  <div class="card-body">
+                    <h4 class="card-title">
+                      Foodtasker driver mobile frontend
+                    </h4>
+                    <p class="card-text">
+                      An UberEats clone and mobile app where drivers can pick
+                      orders, deliver to the customer and track their weekly
+                      income.
+                    </p>
+                    <a
+                      class="btn btn-outline-success btn-pill"
+                      target="_blank"
+                      href="https://socialape-69760.firebaseapp.com/"
+                      >Download APK file &rarr;</a
                     >
                   </div>
                 </div>
