Add download link to FoodTaksker APK file

--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
                     <a
                       class="btn btn-outline-success btn-pill"
                       target="_blank"
-                      href="https://araba-app.herokuapp.com/"
+                      href="https://github.com/Kgotso-Koete/foodTasker-customer-driver-mobile-app/blob/master/app-debug.apk"
                       >Download APK file &rarr;</a
                     >
                   </div>
@@ -430,7 +430,7 @@
                     <a
                       class="btn btn-outline-success btn-pill"
                       target="_blank"
-                      href="https://socialape-69760.firebaseapp.com/"
+                      href="https://github.com/Kgotso-Koete/foodTasker-customer-driver-mobile-app/blob/master/app-debug.apk"
                       >Download APK file &rarr;</a
                     >
                   </div>
