--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
                       class="btn btn-outline-success btn-pill"
                       target="_blank"
                       href="https://github.com/Kgotso-Koete/foodTasker-customer-driver-mobile-app/blob/master/app-debug.apk"
-                      >Download APK file &rarr;</a
+                      >Download Android APK file &rarr;</a
                     >
                   </div>
                 </div>
@@ -431,7 +431,7 @@
                       class="btn btn-outline-success btn-pill"
                       target="_blank"
                       href="https://github.com/Kgotso-Koete/foodTasker-customer-driver-mobile-app/blob/master/app-debug.apk"
-                      >Download APK file &rarr;</a
+                      >Download Android APK file &rarr;</a
                     >
                   </div>
                 </div>
