--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     />
     <link rel="stylesheet" href="css/shards.min.css?v=3.0.0" />
     <link rel="stylesheet" href="css/shards-extras.min.css?version=3.0.0" />
+    <link rel="stylesheet" href="css/custom.css?version=3.0.0" />
   </head>
   <body class="shards-app-promo-page--1">
     <!-- Welcome Section -->
@@ -55,9 +56,6 @@
                 <a class="nav-link" href="#"
                   >Home <span class="sr-only">(current)</span></a
                 >
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#services">Services</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#examples">Prototype Examples</a>
@@ -103,7 +101,7 @@
               My name is KG and I am a Full-Stack Software Artisan
               <a
                 target="_blank"
-                style="color:#51B065"
+                style="color: #51b065;"
                 href="https://www.linkedin.com/in/kgotso-koete-7b066631/"
                 >(Resume)
               </a>
@@ -128,87 +126,6 @@
     </div>
     <!-- / Welcome Section -->
 
-    <!-- Features Section -->
-    <div id="app-features" class="app-features section">
-      <div class="container-fluid">
-        <div class="row">
-          <div class="app-screenshot col-lg-4 col-md-12 col-sm-12 px-0 py-5">
-            <img
-              class="mt-auto mb-auto"
-              src="images/app-promo/iphone-app-screenshot.png"
-              alt="App Screenshot - Shards App Promo Demo Page"
-            />
-          </div>
-
-          <!-- App Features Wrapper -->
-          <div
-            class="app-features-wrapper col-lg-4 col-md-6 col-sm-12 py-5 mx-auto"
-            id="services"
-          >
-            <div class="container">
-              <h3 class="section-title underline--left my-5">Services</h3>
-              <div class="feature py-4 d-flex">
-                <div class="icon text-white bg-success mr-5">
-                  <i class="fa fa-map-signs"></i>
-                </div>
-                <div>
-                  <h5>Understanding customer and business needs</h5>
-                  <p>
-                    Understanding the customer problem and the need for
-                    software. Agreeing on a list of features and channels to be
-                    deployed - Web vs Mobile.
-                  </p>
-                </div>
-              </div>
-
-              <div class="feature py-4 d-flex">
-                <div class="icon text-white bg-success mr-5">
-                  <i class="fa fa-flask"></i>
-                </div>
-                <div>
-                  <h5>Rapid development</h5>
-                  <p>
-                    Using continuous feedback to develop a beta web or mobile
-                    application including a back-end/database hosted with cloud
-                    services like Heroku/Google Firestore/AWS.
-                  </p>
-                </div>
-              </div>
-
-              <div class="feature py-4 d-flex">
-                <div class="icon text-white bg-success mr-5">
-                  <i class="fa fa-paper-plane"></i>
-                </div>
-                <div>
-                  <h5>Final tests and handover</h5>
-                  <p>
-                    Rapid testing of software and handover to the management
-                    team
-                  </p>
-                </div>
-              </div>
-
-              <div class="feature py-4 d-flex">
-                <div class="icon text-white bg-success mr-5">
-                  <i class="fa fa-globe"></i>
-                </div>
-                <div>
-                  <h5>Test -> pivot/invest/throw away</h5>
-                  <p>
-                    Cheap enough to test in the market, pivot or even throw
-                    away. Technology stacks include Mongodb Express React Node
-                    (MERN), Ruby on Rails, Python/Django - making it easy for
-                    hire developers with similar skills.
-                  </p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <!-- / Features Section -->
-
     <!-- Our Blog Section -->
     <div class="blog section section-invert py-4" id="examples">
       <h3 class="section-title text-center m-5">
@@ -218,114 +135,70 @@
         <div class="py-4">
           <div class="row">
             <div class="card-deck">
-              <div class="col-md-12 col-lg-6">
+              <div class="col-md-12 col-lg-12">
                 <div class="card mb-4">
-                  <img
-                    class="card-img-top"
-                    src="images/Araba.png"
-                    alt="Card image cap"
-                  />
-                  <div class="card-body">
+                  <div class="smart-phone-wrapper">
                     <h4 class="card-title">
-                      Araba Q&A web app
+                      Try the mobile app below
                     </h4>
-                    <p class="card-text">
-                      Araba is a Q&A app built with the Meteor JS framework and
-                      deployed to the web on Heroku
-                    </p>
-                    <a
-                      class="btn btn-outline-success btn-pill"
-                      target="_blank"
-                      href="https://araba-app.herokuapp.com/"
-                      >Click to see demo &rarr;</a
-                    >
+                    <div class="smartphone">
+                      <div class="content">
+                        <iframe
+                          src="https://conduit-mobile-by-kg.web.app/welcome"
+                          style="width: 100%; border: none; height: 100%;"
+                        ></iframe>
+                      </div>
+                    </div>
+                    <div class="card-body">
+                      <h4 class="card-title">
+                        Conduit Blogging: Mobile/hybrid app
+                      </h4>
+                      <p class="card-text">
+                        Conduit is a social blogging site similar to
+                        Medium/Tumblr. Modified from Thinkster's open source app
+                        using MEAN stack.
+                      </p>
+                      <a
+                        class="btn btn-outline-success btn-pill"
+                        target="_blank"
+                        href="https://conduit-mobile-by-kg.web.app/welcome"
+                        >Click to see demo &rarr;</a
+                      >
+                    </div>
                   </div>
                 </div>
               </div>
 
-              <div class="col-md-12 col-lg-6">
+              <div class="col-md-12 col-lg-12">
                 <div class="card mb-4">
-                  <div class="embed-responsive embed-responsive-16by9">
-                    <iframe
-                      width="560"
-                      height="315"
-                      src="https://www.youtube.com/embed/TEplbkre20k"
-                      frameborder="0"
-                      allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                      allowfullscreen
-                    ></iframe>
-                  </div>
-                  <div class="card-body">
+                  <div class="large-screen-wrapper">
                     <h4 class="card-title">
-                      Araba Q&A mobile app
+                      Try the browser app below
                     </h4>
-                    <p class="card-text">
-                      Android mobile version of Araba build with Meteor &
-                      Cordova and deployed to the Google Play Store. Mobile app
-                      server is based on the API URL of web app deployed on
-                      Heroku. Google Play Store link below.
-                    </p>
-
-                    <a
-                      target="_blank"
-                      href="https://play.google.com/store/apps/details?id=com.idx8tytbmgs9oy.j9l57qbivfxe&hl=en"
-                      ><img
-                        class="w-25 mt-2"
-                        src="images/app-promo/badge-google-play-store.png"
-                        alt="Get it on Google Play Store"
-                    /></a>
-                  </div>
-                </div>
-              </div>
-
-              <div class="col-md-12 col-lg-6">
-                <div class="card mb-4">
-                  <img
-                    class="card-img-top"
-                    src="images/SocialApe.png"
-                    alt="Card image cap"
-                  />
-                  <div class="card-body">
-                    <h4 class="card-title">
-                      SocialApe
-                    </h4>
-                    <p class="card-text">
-                      SocialApe is a Microblogging app similar to Twitter minus
-                      the aggression. Built with React and Material Design as
-                      the frontend and Firebase as the backend
-                    </p>
-                    <a
-                      class="btn btn-outline-success btn-pill"
-                      target="_blank"
-                      href="https://socialape-69760.firebaseapp.com/"
-                      >Click to see demo &rarr;</a
-                    >
-                  </div>
-                </div>
-              </div>
-
-              <div class="col-md-12 col-lg-6">
-                <div class="card mb-4">
-                  <img
-                    class="card-img-top"
-                    src="images/Conduit.png"
-                    alt="Card image cap"
-                  />
-                  <div class="card-body">
-                    <h4 class="card-title">
-                      Conduit Blogging
-                    </h4>
-                    <p class="card-text">
-                      Conduit is a social blogging site similar to
-                      Medium/Tumblr. Modified from Thinkster's open source app
-                      using MERN stack.
-                    </p>
-                    <a
-                      class="btn btn-outline-success btn-pill"
-                      target="_blank"
-                      href="https://conduit-by-kg.firebaseapp.com/"
-                      >Click to see demo &rarr;</a
-                    >
+                    <div class="large-screen">
+                      <div class="content">
+                        <iframe
+                          src="https://conduit-angular-by-kg.firebaseapp.com/home"
+                          style="width: 100%; border: none; height: 100%;"
+                        ></iframe>
+                      </div>
+                    </div>
+                    <div class="card-body">
+                      <h4 class="card-title">
+                        Conduit Blogging: Browser web app
+                      </h4>
+                      <p class="card-text">
+                        Conduit is a social blogging site similar to
+                        Medium/Tumblr. Modified from Thinkster's open source app
+                        using MEAN stack.
+                      </p>
+                      <a
+                        class="btn btn-outline-success btn-pill"
+                        target="_blank"
+                        href="https://conduit-angular-by-kg.firebaseapp.com/home"
+                        >Click to see demo &rarr;</a
+                      >
+                    </div>
                   </div>
                 </div>
               </div>
@@ -444,7 +317,7 @@
     <!-- / Our Blog Section -->
 
     <!-- Contact Section -->
-    <div class="contact section-invert py-4" id="contact">
+    <div class="col-12 contact section-invert py-4" id="contact">
       <h3 class="section-title text-center m-5">
         Drop me a line: kgotso.koete@equinoxxadvisory.com
       </h3>
@@ -478,9 +351,6 @@
                 <a class="nav-link" href="#"
                   >Home <span class="sr-only">(current)</span></a
                 >
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#services">Services</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#examples">Prototype Examples</a>
