--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
     <!-- Our Blog Section -->
     <div class="blog section section-invert py-4" id="examples">
       <h3 class="section-title text-center m-5">
-        Demo's of software that I built
+        Demos of software that I built:
       </h3>
       <div class="container">
         <div class="py-4">
@@ -139,7 +139,8 @@
                 <div class="card mb-4">
                   <div class="smart-phone-wrapper">
                     <h4 class="card-title">
-                      Try the mobile app below
+                      <span class="call-to-action">Try the mobile app: </span>
+                      Please view on a large screen to compare web vs mobile
                     </h4>
                     <div class="smartphone">
                       <div class="content">
@@ -173,7 +174,8 @@
                 <div class="card mb-4">
                   <div class="large-screen-wrapper">
                     <h4 class="card-title">
-                      Try the browser app below
+                      <span class="call-to-action">Try the browser app: </span>
+                      Please view on a large screen to compare web vs mobile
                     </h4>
                     <div class="large-screen">
                       <div class="content">
