--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                     <div class="large-screen">
                       <div class="content">
                         <iframe
-                          src="https://conduit-angular-by-kg.firebaseapp.com/login"
+                          src="https://conduit-angular-by-kg.firebaseapp.com/home"
                           style="width: 100%; border: none; height: 100%;"
                         ></iframe>
                       </div>
@@ -197,7 +197,7 @@
                       <a
                         class="btn btn-outline-success btn-pill"
                         target="_blank"
-                        href="https://conduit-angular-by-kg.firebaseapp.com/login"
+                        href="https://conduit-angular-by-kg.firebaseapp.com/home"
                         >Click to see demo &rarr;</a
                       >
                     </div>
