--- a/index.html
+++ b/index.html
@@ -126,8 +126,11 @@
     </div>
     <!-- / Welcome Section -->
 
-    <!-- Our Blog Section -->
-    <div class="blog section section-invert py-4" id="examples">
+    <!-- Demos Section: Big screens -->
+    <div
+      class="blog section section-invert py-4 big-screen-demos"
+      id="examples"
+    >
       <h3 class="section-title text-center m-5">
         Demos of software that I built:
       </h3>
@@ -157,13 +160,18 @@
                       <p class="card-text">
                         Conduit is a social blogging site similar to
                         Medium/Tumblr. Modified from Thinkster's open source app
-                        using MEAN stack.
+                        using Angular Ionic stack. This is a hybrid application
+                        that can be viewed on browsers and compiled into an
+                        android app. Click here to
+                        <a target="_blank" href="./app-debug.apk"
+                          >download the android app &rarr;</a
+                        >
                       </p>
                       <a
                         class="btn btn-outline-success btn-pill"
                         target="_blank"
                         href="https://conduit-mobile-by-kg.web.app/welcome"
-                        >Click to see demo &rarr;</a
+                        >Click to see browser demo &rarr;</a
                       >
                     </div>
                   </div>
@@ -209,9 +217,89 @@
         </div>
       </div>
     </div>
-    <!-- / Our Blog Section -->
+    <!-- Demos Section: Big screens -->
 
-    <!-- Our Blog Section -->
+    <!-- Demos Section: Small screens -->
+    <div
+      class="blog section section-invert py-4 small-screen-demos"
+      id="examples"
+    >
+      <h3 class="section-title text-center m-5">
+        Conduit is a social blogging site similar to Medium/Tumblr.
+      </h3>
+      <h3 class="section-title text-center m-5">
+        Modified from Thinkster's open source app
+      </h3>
+      <h3 class="section-title text-center m-5">
+        Please view on large screen for the best experience
+      </h3>
+      <div class="container">
+        <div class="py-4">
+          <div class="row">
+            <div class="card-deck">
+              <div class="col-md-12 col-lg-12">
+                <div class="card mb-4">
+                  <div class="embed-in-small-screen">
+                    <iframe
+                      class=""
+                      src="https://conduit-mobile-by-kg.web.app/welcome"
+                      style="width: 100%; border: none; height: 100%;"
+                    ></iframe>
+                  </div>
+                  <div class="card-body">
+                    <h4 class="card-title">
+                      Conduit Blogging: Mobile/hybrid app
+                    </h4>
+                    <p class="card-text">
+                      Hybrid application that can be viewed on browsers and
+                      compiled into an android app. Click here to
+                      <a target="_blank" href="./app-debug.apk"
+                        >download the android app &rarr;</a
+                      >
+                    </p>
+                    <a
+                      class="btn btn-outline-success btn-pill"
+                      target="_blank"
+                      href="https://conduit-mobile-by-kg.web.app/welcome"
+                      >Click to see demo &rarr;</a
+                    >
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-md-12 col-lg-12">
+                <div class="card mb-4">
+                  <div class="embed-in-small-screen">
+                    <iframe
+                      src="https://conduit-angular-by-kg.firebaseapp.com/login"
+                      style="width: 100%; border: none; height: 100%;"
+                    ></iframe>
+                  </div>
+                  <div class="card-body">
+                    <h4 class="card-title">
+                      Conduit Blogging: Browser web app
+                    </h4>
+                    <p class="card-text">
+                      Angular Browser app that can also be compiled to android
+                      mobile app with Cordova
+                    </p>
+                    <a
+                      class="btn btn-outline-success btn-pill"
+                      target="_blank"
+                      href="https://conduit-angular-by-kg.firebaseapp.com/login"
+                      >Click to see demo &rarr;</a
+                    >
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Demos Section: Small screens -->
+
+    <!-- Other Examples Section -->
     <div class="blog section section-invert py-4" id="examples">
       <h3 class="section-title text-center m-5">
         The FoodTasker Android app, an MVP clone of UberEats food delivery
@@ -255,8 +343,6 @@
                 <div class="card mb-4">
                   <div class="embed-responsive embed-responsive-16by9">
                     <iframe
-                      width="560"
-                      height="315"
                       src="https://www.youtube.com/embed/kaGekU4ppTk"
                       frameborder="0"
                       allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
@@ -285,8 +371,6 @@
                 <div class="card mb-4">
                   <div class="embed-responsive embed-responsive-16by9">
                     <iframe
-                      width="560"
-                      height="315"
                       src="https://www.youtube.com/embed/c2dS_BJX-Qc"
                       frameborder="0"
                       allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
@@ -316,14 +400,18 @@
         </div>
       </div>
     </div>
-    <!-- / Our Blog Section -->
+    <!-- Other Examples Section -->
 
     <!-- Contact Section -->
-    <div class="col-12 contact section-invert py-4" id="contact">
-      <h3 class="section-title text-center m-5">
-        Drop me a line: kgotso.koete@equinoxxadvisory.com
-      </h3>
+    <div class="row">
+      <div class="col-12 contact section-invert py-4" id="contact">
+        <h3 class="section-title text-center m-5">
+          Drop me a line:
+          <div class="contact-email">kgotso.koete@equinoxxadvisory.com</div>
+        </h3>
+      </div>
     </div>
+
     <!-- / Contact Section -->
 
     <!-- Footer Section -->
