--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
     </div>
     <!-- / Welcome Section -->
 
-    <!-- Demos Section: Big screens -->
+    <!-- Sell-Hub Demo: Small screen -->
     <div
       class="blog section section-invert py-4 big-screen-demos"
       id="examples"
@@ -134,6 +134,54 @@
       <h3 class="section-title text-center m-5">
         Demos of software that I built:
       </h3>
+      <div class="container">
+        <div class="py-4">
+          <div class="row">
+            <div class="card-deck">
+              <div class="col-md-12 col-lg-12">
+                <div class="card mb-4">
+                  <div class="smart-phone-wrapper">
+                    <h4 class="card-title">
+                      <span class="call-to-action">Try the mobile app: </span>
+                      Please view on a large screen to compare web vs mobile
+                    </h4>
+                    <div class="smartphone">
+                      <div class="content">
+                        <iframe
+                          src="https://sell-hub.web.app/"
+                          style="width: 100%; border: none; height: 100%;"
+                        ></iframe>
+                      </div>
+                    </div>
+                    <div class="card-body">
+                      <h4 class="card-title">
+                        Sell Hub: Mobile/hybrid app
+                      </h4>
+                      <p class="card-text">
+                        Sell Hub is a classifieds ads/listing site similar to
+                        OLX or Craig's List. Built using Angular Ionic stack.
+                        This is a hybrid application that can be viewed on
+                        browsers and compiled into an android app. Click here to
+                        <a target="_blank" href="./sell-hub-app-debug.apk"
+                          >download the android app &rarr;</a
+                        >
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Sell-Hub Demo: Small screen -->
+
+    <!-- Conduit Demo: Small screen -->
+    <div
+      class="blog section section-invert py-4 big-screen-demos"
+      id="examples"
+    >
       <div class="container">
         <div class="py-4">
           <div class="row">
@@ -163,7 +211,7 @@
                         using Angular Ionic stack. This is a hybrid application
                         that can be viewed on browsers and compiled into an
                         android app. Click here to
-                        <a target="_blank" href="./app-debug.apk"
+                        <a target="_blank" href="./conduit-app-debug.apk"
                           >download the android app &rarr;</a
                         >
                       </p>
@@ -217,9 +265,9 @@
         </div>
       </div>
     </div>
-    <!-- Demos Section: Big screens -->
+    <!-- Conduit Demo: Small screen -->
 
-    <!-- Demos Section: Small screens -->
+    <!-- Conduit Demo: Big screen -->
     <div
       class="blog section section-invert py-4 small-screen-demos"
       id="examples"
@@ -297,7 +345,7 @@
         </div>
       </div>
     </div>
-    <!-- Demos Section: Small screens -->
+    <!-- Conduit Demo: Big screen -->
 
     <!-- Other Examples Section -->
     <div class="blog section section-invert py-4" id="examples">
