minor edits to add tech stacks

--- a/index.html
+++ b/index.html
@@ -159,9 +159,10 @@
                       </h4>
                       <p class="card-text">
                         Sell Hub is a classifieds ads/listing site similar to
-                        OLX or Craig's List. Built using Angular Ionic stack.
-                        This is a hybrid application that can be viewed on
-                        browsers and compiled into an android app. Click here to
+                        OLX or Craig's List. Built using Ionic (front end),
+                        Python Django (back end) and PostgresSQL(database). This
+                        is a hybrid application that can be viewed on browsers
+                        and compiled into an android app. Click here to
                         <a target="_blank" href="./sell-hub-app-debug.apk"
                           >download the android app &rarr;</a
                         >
@@ -208,9 +209,10 @@
                       <p class="card-text">
                         Conduit is a social blogging site similar to
                         Medium/Tumblr. Modified from Thinkster's open source app
-                        using Angular Ionic stack. This is a hybrid application
-                        that can be viewed on browsers and compiled into an
-                        android app. Click here to
+                        using Ionic (front end), Node/Express (back end) and
+                        MongoDB(database). This is a hybrid application that can
+                        be viewed on browsers and compiled into an android app.
+                        Click here to
                         <a target="_blank" href="./conduit-app-debug.apk"
                           >download the android app &rarr;</a
                         >
@@ -248,7 +250,8 @@
                       <p class="card-text">
                         Conduit is a social blogging site similar to
                         Medium/Tumblr. Modified from Thinkster's open source app
-                        using MEAN stack.
+                        using Angular (front end), Node/Express (back end) and
+                        MongoDB(database)
                       </p>
                       <a
                         class="btn btn-outline-success btn-pill"
@@ -375,7 +378,7 @@
                     </h4>
                     <p class="card-text">
                       An UberEats clone where restaurant users can create
-                      restaurants, menu's and meals.
+                      restaurants, menu's and meals (Python Django)
                     </p>
                     <a
                       class="btn btn-outline-success btn-pill"
@@ -403,7 +406,8 @@
                     </h4>
                     <p class="card-text">
                       An UberEats clone and mobile app where customers can sign
-                      in using Facebook, create, pay for and track orders.
+                      in using Facebook, create, pay for and track orders
+                      (Android Java).
                     </p>
                     <a
                       class="btn btn-outline-success btn-pill"
@@ -432,7 +436,7 @@
                     <p class="card-text">
                       An UberEats clone and mobile app where drivers can pick
                       orders, deliver to the customer and track their weekly
-                      income.
+                      income (Android Java).
                     </p>
                     <a
                       class="btn btn-outline-success btn-pill"
