Add info about deployement

--- a/index.html
+++ b/index.html
@@ -162,7 +162,9 @@
                         OLX or Craig's List. Built using Ionic (front end),
                         Python Django (back end) and PostgresSQL(database). This
                         is a hybrid application that can be viewed on browsers
-                        and compiled into an android app. Click here to
+                        and compiled into an android app. The app was deployed
+                        to Heroku (back end), Firebase (front end) and AWS
+                        (media files). Click here to
                         <a target="_blank" href="./sell-hub-app-debug.apk"
                           >download the android app &rarr;</a
                         >
@@ -212,7 +214,8 @@
                         using Ionic (front end), Node/Express (back end) and
                         MongoDB(database). This is a hybrid application that can
                         be viewed on browsers and compiled into an android app.
-                        Click here to
+                        The app was deployed to Heroku (back-end) and Firebase
+                        (front end and media files). Click here to
                         <a target="_blank" href="./conduit-app-debug.apk"
                           >download the android app &rarr;</a
                         >
@@ -251,7 +254,8 @@
                         Conduit is a social blogging site similar to
                         Medium/Tumblr. Modified from Thinkster's open source app
                         using Angular (front end), Node/Express (back end) and
-                        MongoDB(database)
+                        MongoDB(database). The app was deployed to Heroku
+                        (back-end) and Firebase (front end and media files)
                       </p>
                       <a
                         class="btn btn-outline-success btn-pill"
@@ -378,7 +382,9 @@
                     </h4>
                     <p class="card-text">
                       An UberEats clone where restaurant users can create
-                      restaurants, menu's and meals (Python Django)
+                      restaurants, menu's and meals. The stack used was Python
+                      Django front and back end deployed to Heroku and AWS
+                      (media files).
                     </p>
                     <a
                       class="btn btn-outline-success btn-pill"
